fix(EmulatedBoldText): fix overflow for focus outline

--- a/packages/components/src/components/EmulatedBoldText/EmulatedBoldText.module.scss
+++ b/packages/components/src/components/EmulatedBoldText/EmulatedBoldText.module.scss
@@ -10,5 +10,5 @@
   height: 0;
   line-height: 0;
   visibility: hidden;
-  overflow: clip;
+  overflow-y: clip;
 }
